--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Admin.Order.OverviewUserOrderActivity"></activity>
+        <activity android:name=".Admin.Order.OverviewUserOrderActivity" />
         <activity android:name=".Admin.Product.ProductAdminDetailActivity" />
         <activity android:name=".Admin.Order.UserOrderDetailActivity" />
         <activity android:name=".Admin.Product.SelectCategory" />
@@ -29,8 +30,7 @@
         <activity android:name=".User.Setting.UpdateProfileActivity" />
         <activity
             android:name=".User.HomeActivity"
-            android:label="@string/title_activity_home"
-            />
+            android:label="@string/title_activity_home" />
         <activity android:name=".Admin.AdminHomeActivity" />
         <activity android:name=".Admin.Product.AddProductActivity" />
         <activity android:name=".Auth.VerifyPhoneActivity" />
